# aidu-ai-sympy

./: .gitignore  Makefile  README.md  pyproject.toml
src/aidu/ai/sympy/ast/navigation/: cursor.py  walk.py
src/aidu/ai/sympy/ast/normalization/: transform.py
src/aidu/ai/sympy/ast/operations/: db.py  transform.py
src/aidu/ai/sympy/ast/parser/: parse.py
src/aidu/ai/sympy/ast/pretty/: ascii.py  linear.py  tree.py
src/aidu/ai/sympy/ast/transforms/: __init__.py  transform.py
test/: test_boxed_expression.py  test_centered_boxed_expression.py  test_cleanup.py  test_cleanup_enhanced.py  test_cleanup_parentheses.py  test_comprehensive_cleanup.py  test_factor.py  test_factoring.py  test_fractions.py  test_parse.py  test_parse_v2.py  test_pi_rendering.py  test_pi_rendering_final.py  test_pi_rendering_v2.py  test_repr.py  test_snippet.py  test_type.py  verify_fractional_pi.py  verify_parens.py  verify_rational.py
