[project]
name = "aidu-ai-sympy"
version = "0.1.0"
description = "A Python package for AIDu's SymPy interface."
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "rich==14.3.2",
    "pydantic>=2.0",
    "sympy>=1.11.0,<2.0.0",
    "readchar>=4.0"
]

# Optional dependencies for development and testing
[dependency-groups]
dev = [
    "pytest>=7.0",
]

[project.entry-points."aidu"]
sympy = "aidu.ai.sympy.plugin:plugin"

# Build system configuration using Hatchling tools
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package everything under src/aidu into the wheel
[tool.hatch.build.targets.wheel]
sources = { "src" = "" }
packages = [
    "src/aidu/ai/sympy"
]